--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: Chien Hua(Brian) | Professional Portfolio
 # Edit next line, replacing 'techfolios' with your github username
 url: "https://shu4dev.github.io"
 # Edit next line so that baseurl is "" if your repo is <username>.github.io
-baseurl: "shu4dev.github.io"
+baseurl: ""
 
 # OPTIONAL CHANGES
 ## Specify the theme using any of the css files in css/techfolio-theme
